--- a/.editorconfig
+++ b/.editorconfig
@@ -4,13 +4,19 @@ root = true
 [*]
 charset = utf-8
 indent_style = space
-indent_size = 2
+indent_size = tab
+tab_width = 2
+end_of_line = lf
 insert_final_newline = true
 trim_trailing_whitespace = true
+max_line_length = 120
 
-[*.ts]
+[*.{js,jsx,ts,tsx,vue}]
 quote_type = single
 
 [*.md]
 max_line_length = off
 trim_trailing_whitespace = false
+
+[*.{env,env.local,env.*.local}]
+insert_final_newline = false
