--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
   "name": "ngeclips",
-  "version": "0.0.0",
+  "version": "0.1.0",
+  "description": "This project was generated with [Angular CLI](https://github.com/angular/angular-cli) version 13.2.6.",
+  "author": "Sulthon Abdul Malik <sulthon.abdmalik@gmail.com>",
+  "license": "MIT",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "prettify": "prettier -w \"{src,template}/**/*.{md,html,css,scss,json,js,jsx,ts,tsx,vue}\"",
+    "prepare": "husky install"
   },
-  "private": true,
   "dependencies": {
     "@angular/animations": "~13.2.0",
     "@angular/common": "~13.2.0",
@@ -28,12 +32,19 @@
     "@angular/compiler-cli": "~13.2.0",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
+    "husky": "^7.0.4",
     "jasmine-core": "~4.0.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.1.0",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
+    "lint-staged": "^12.4.1",
+    "prettier": "^2.6.2",
+    "tailwindcss": "^3.0.24",
     "typescript": "~4.5.2"
+  },
+  "lint-staged": {
+    "*.{md,html,css,scss,json,js,jsx,ts,tsx,vue}": "prettier -w"
   }
 }
