--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "tailwindcss": "^3.0.24",
     "typescript": "~4.5.2"
   },
+  "repository": "https://github.com/samara98/ngeclips.git",
+  "bugs": "https://github.com/samara98/ngeclips/issues",
   "lint-staged": {
     "*.{md,html,css,scss,json,js,jsx,ts,tsx,vue}": "prettier -w"
   }
